# fragarach

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/api/: mod.rs  transpose.rs  urlscan.rs
src/cli/: mod.rs
src/config/: mod.rs
src/helpers/: database_operations.rs  database_setup.rs  mod.rs  postgres.rs  setup_schema.rs  storage.rs
src/sql/: ethereum_accounts.sql  ethereum_transactions.sql
